# Robot_Receptionist_Project

./: README.md  commands  readme
button_localization/: setup.py
button_localization/button_localization/: plane_estimation.py
button_localization/localization/: localization_calculations.ipynb
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Entities.msg  LaserVisualData.msg  LaserVisualDataArray.msg  PersonArray.msg  PersonInfo.msg  Yolov10Inference.msg
gazebo_sfm_plugin-galactic/launch/: launch_gpu_sim.launch.py
gazebo_sfm_plugin-galactic/worlds/: empty_file.world  no_roof_small_warehouse.world  small_house.world
smrr_controller/config/: arm_controller.yaml
smrr_controller/launch/: controller.launch.py
smrr_description/launch/: gazebo_gpu.launch.py
smrr_description/urdf/: camera.urdf  lidar.urdf  smrr_description.urdf  smrr_ros2_control.urdf  transmission.urdf
smrr_executions/: CMakeLists.txt  package.xml
smrr_executions/src/: move_pose.cpp  testing.cpp
smrr_moveit/config/: moveit.rviz
yolo_recognition/: package.xml  setup.py
yolo_recognition/yolo_recognition/: inference_node.py  lidar_subscriber.py  lidar_subscriber_2.py  sensor_fusion.py  visualizer.py  yolo_node.py
yolo_recognition/yolo_recognition/include/: marker_visualizer.py
yolo_recognition/yolo_recognition/yolov10n/: data.pkl
yolo_recognition/yolo_recognition/yolov10n/.data/: serialization_id
yolo_recognition/yolo_recognition/yolov10n/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  (+472 more)
